src/tests/functionality/assignment_5_functions_headers/valid/07_mandatory_const_pointer_parameter_read_only.c
int read_const(const int *p) {
    return *p;
}

int main() {
    int x = 8;
    return read_const(&x);
}
