src/tests/functionality/assignment_5_functions_headers/invalid_semantic/11_mandatory_call_wrong_argument_type_pointer.c
void set_value(int *p) {
    *p = 1;
    return;
}

int main() {
    int x = 0;
    set_value(x);
    return x;
}
